--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint . --ext .ts",
+    "tsc": "tsc",
+    "build": "rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc"
+    "start": "npm run build && node build/index.js",
+    "start:dev": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -17,11 +21,22 @@
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.14",
     "@types/yup": "^0.29.3",
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "currency-codes": "^2.1.0",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
     "morgan": "^1.10.0",
     "typescript": "^3.9.6",
     "yup": "^0.29.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
+    "eslint": "^7.3.1",
+    "eslint-plugin-shopify": "^35.1.0",
+    "nodemon": "^2.0.4",
+    "rimraf": "^3.0.2",
+    "ts-node": "^8.10.2"
   }
 }
