--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint . --ext .ts",
     "tsc": "tsc",
     "build": "rimraf ./build && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "coverage": "jest --coverage",
     "start": "npm run build && node build/index.js",
     "start:dev": "nodemon"
   },
@@ -27,16 +28,18 @@
     "express": "^4.17.1",
     "helmet": "^3.23.3",
     "morgan": "^1.10.0",
-    "typescript": "^3.9.6",
     "yup": "^0.29.1"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.3",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "eslint": "^7.3.1",
     "eslint-plugin-shopify": "^35.1.0",
+    "jest": "^26.1.0",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
-    "ts-node": "^8.10.2"
+    "ts-jest": "^26.1.1",
+    "typescript": "^3.9.6"
   }
 }
