--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "helmet": "^3.23.3",
     "morgan": "^1.10.0",
+    "ts-node": "^8.10.2",
     "yup": "^0.29.1"
   },
   "devDependencies": {
